--- a/src/style.css
+++ b/src/style.css
@@ -11,84 +11,58 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #00152b;
+  background-color: #68acf0;
   font-family: Arial, Helvetica, sans-serif;
   overflow: hidden;
 }
 
-.box {
+.loader {
   position: relative;
-  width: 600px;
+  width: 150px;
   height: 150px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 0;
 }
 
-h2 {
-  color: #fff;
-  font-size: 3rem;
-  font-weight: 100;
-  letter-spacing: 4px;
-  text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
-    0 0 80px #00b3ff, 0 0 120px #00b3ff;
-}
-
-.lightbar {
+span {
   position: absolute;
-  top: 50%;
-  left: 0;
-  width: 6px;
-  height: 60%;
-  transform: translateY(-50%);
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
-    0 0 80px #00b3ff, 0 0 120px #00b3ff;
-  animation: light-move 5s linear infinite;
-  z-index: 10;
-}
-
-.toplayer {
-  position: absolute;
-  top: -50;
-  left: 0;
   width: 100%;
-  height: 300px;
-  background: #00152b;
-  animation: reveal 10s linear infinite;
-  z-index: 5;
+  height: 100%;
+  border-radius: 50%;
+
+  &:first-child {
+    backdrop-filter: blur(10px);
+    background-color: #ffffff10;
+    z-index: 10;
+  }
+
+  &:nth-child(2) {
+    background-color: #ff4500;
+    border-radius: 16px;
+    animation: animate 4s ease-in-out infinite;
+  }
+
+  &:last-child {
+    background-color: #c8ff00;
+    border-radius: 50%;
+    animation: animate 4s ease-in-out infinite;
+    animation-delay: -2s;
+  }
 }
 
-@keyframes light-move {
+@keyframes animate {
   0% {
-    transform: scaleY(0) translateY(-50%) translateX(0);
+    transform: translate(-150px, 50px) scale(0.4) rotate(0deg);
+    z-index: 5;
   }
-  10% {
-    transform: scaleY(1) translateY(-50%) translateX(0);
+  50% {
+    transform: translate(150px, -50px) scale(0.4) rotate(180deg);
+    z-index: 5;
   }
-  90% {
-    transform: scaleY(1) translateY(-50%) translateX(calc(600px - 6px));
+  50.0001% {
+    transform: translate(150px, -50px) scale(0.4) rotate(180deg);
+    z-index: 15;
   }
   100% {
-    transform: scaleY(0) translateY(-50%) translateX(calc(600px - 6px));
-  }
-}
-
-@keyframes reveal {
-  5% {
-    transform: translateX(0);
-  }
-  45%,
-  50% {
-    transform: translateX(100%);
-  }
-  50.0001%,
-  55% {
-    transform: translateX(-100%);
-  }
-  95% {
-    transform: translateX(0);
+    transform: translate(-150px, 50px) scale(0.4) rotate(360deg);
+    z-index: 15;
   }
 }
